leptos-fluent-macros/tests/ui/leptos_fluent/fail/empty.stderr
error: Missing `translations` parameter
Error:  --> tests/ui/leptos_fluent/fail/empty.rs:6:5
  |
6 |     leptos_fluent! {};
  |     ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `leptos_fluent` (in Nightly builds, run with -Z macro-backtrace for more info)
